src/snapshots/afrotd__parser__tests__interpretation_7.3.7_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 7
index: 3
text: "3. und 9 von der A-6. A1 wirft einen zweiten Vorwärtspass aus\nseiner Endzone. B2 fängt den Ball ab und wird an der A-20 zu Boden\ngebracht."
ruling: "Team B kann die Strafe annehmen, die in einem\nSafety resultiert oder das Ergebnis des Downs akzeptieren und den Ball\nfür einen First Down von der A-20 behalten."
