src/snapshots/afrotd__parser__tests__interpretation_7.3.8_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 10
text: "Bevor der Pass geworfen wird, laufen Wide Receiver A88 und\nDefender B1 Schulter an Schulter und Seite an Seite 15 Meter jenseits\nder neutralen Zone. A88 befindet sich dabei näher zur Seitenlinie und\nB1 näher zur Hash Mark. A88 biegt zur Spielfeldmitte ab. B1 bewegt\nsich nicht zur Seite und A88 prallt gegen ihn."
ruling: "Kein Foul,\ndenn der Pass wurde nicht geworfen."
