src/snapshots/afrotd__parser__tests__interpretation_7.3.8_13.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 13
text: "A80, ein Tight End, bewegt sich bei einer Pass-Route quer\ndurch die Defense Formation und berührt 25 Meter tief im Defense\nBackfield B1, einen Safety, bevor oder nachdem der Ball geworfen wurde. A88, ein Wide Receiver, der auf der gegenüberliegenden Seite von\nA80 beim Snap stand, läuft an A80 und B1 vorbei und fängt hinter ihnen\nden legalen Vorwärtspass."
ruling: Team A-Foul. Offense Passbehinderung. Strafe – 15 Meter vom Previous Spot.
