src/snapshots/afrotd__parser__tests__interpretation_7.3.8_15.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 8
index: 15
text: "Bei einem legalen Vorwärtspass versuchen A80 und B60 jenseits der neutralen Zone diesen Vorwärtspass zu fangen, der in Richtung von A80 geworfen wurde. Der Pass ist zu hoch und wird als nicht\nfangbar gewertet. Als der Ball A80 überfliegt, drückt dieser gegen B60’s\nBrust."
ruling: Keine Offense Passbehinderung.
